--- a/cryptocurrency/website/crypto/templates/crypto/dashboard.html
+++ b/cryptocurrency/website/crypto/templates/crypto/dashboard.html
@@ -1,200 +1,283 @@
-{% extends 'base2.html' %}{% load static %}
-{% block body %}
+{% extends 'base2.html' %}{% load static %} {% block body %}
 <style>
-  .dashboard_bg{
+  .dashboard_bg {
     background-color: white;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
+    -moz-box-shadow: 0 0 10px #ccc;
+    -webkit-box-shadow: 0 0 10px #ccc;
+    box-shadow: 0 0 10px #ccc;
   }
 </style>
 
 <div class="body flex-grow-1 px-3">
-    <div class="container-lg">
-      <div class="row">
-        <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 dashboard_bg">
-            <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-              <div>
-                <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{balance}}{% endif %}<span class="fs-6 fw-normal">
-                    <svg class="icon">
-                      <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-bottom"></use>
-                    </svg></span>
-                </div>
-                <span>Available Balance</span>
-              </div>
-              <div style="display: inline;">
-                <div class="fs-4 fw-semibold">{% if earning is None %}$0{% else %}${{earning}}{% endif %}<span class="fs-6 fw-normal">
-                </div>
-                <span>System Earnings</span>
-              </div>
-            </div>
-            <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: small;">Available balance is withdrawable balance; system earnings are your daily profits
-              </p>
-              <!--<canvas class="chart" id="card-chart1" height="70"></canvas>-->
-            </div>
-          </div>
-        </div>
-        <!-- /.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 dashboard_bg">
-            <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-              <div>
-                <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{confirm}}{% endif %}<span class="fs-6 fw-normal">
-                    <svg class="icon">
-                      <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-top"></use>
-                    </svg></span></div>
-                <div>Total Withdrawal</div>
-              </div>
-              <div class="dropdown">
-                <button class="btn btn-transparent text-white p-0" type="button" data-coreui-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <svg class="icon">
-                    <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"></use>
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: small;">
-                Total Withdrawal is the total amount you have successfully withdraw from your  account.
-              </p>
-              <!--<canvas class="chart" id="card-chart2" height="70"></canvas>-->
-            </div>
-          </div>
-        </div>
-        <!-- /.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 dashboard_bg">
-            <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-              <div>
-                <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{invest}}{% endif %}<span class="fs-6 fw-normal">
-                    <svg class="icon">
-                      <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-top"></use>
-                    </svg></span></div>
-                <div>Active Deposit</div>
-              </div>
-              <div class="dropdown">
-                <button class="btn btn-transparent text-white p-0" type="button" data-coreui-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <svg class="icon">
-                    <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"></use>
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: small;" >
-                Active deposit shows the amount of funds currently  invested.
-              </p>
-              <!--<canvas class="chart" id="card-chart3" height="70"></canvas>-->
+  <div class="container-lg">
+    <div class="row">
+      <div class="col-sm-12 col-lg-7">
+        <div class="card mb-4 dashboard_bg">
+          <div>
+            <center>
+              <strong
+                ><p style="padding-top: 10px; padding-bottom: 0">
+                  Account Balance
+                </p></strong
+              >
+            </center>
+            {% if balance is None %}
+            <span>
+              <center>
+                <p
+                  style="
+                    font-weight: bold;
+                    font-size: larger;
+                    color: red;
+                    margin-bottom: 0;
+                  "
+                >
+                  USD $0.00
+                </p>
+              </center>
+              <center style="padding-top: 0; color: red">
+                Available Balance
+              </center>
+            </span>
+            {% else %}
+            <span>
+              <center>
+                <p
+                  style="
+                    font-weight: bold;
+                    font-size: larger;
+                    color: green;
+                    margin-bottom: 0;
+                  "
+                >
+                  USD ${{balance}}.00
+                </p>
+                <p style="padding-top: 0; color: green">Available Balance</p>
+              </center>
+            </span>
+            {% endif %}
+            <span>
+              <center>
+                <p
+                  style="font-weight: bold; font-size: larger; margin-bottom: 0"
+                >
+                  {% if earning is None %}USD $0.00{% else %}USD
+                  ${{earning}}.00{% endif %}
+                </p>
+                <p style="padding-top: 0">System Earnings</p>
+              </center>
+            </span>
+            <hr />
+            <div>
+              <center>
+                <p style="font-size: small">
+                  Available balance is withdrawable balance; while system
+                  earnings are your daily investment profits
+                </p>
+                <a href="{% url 'deposit' %}"><button style="background-color: green; border: none; margin-bottom: 10px; padding: 5px 10px; color: white; border-radius: 5px;"><i class="fa-solid fa-download"></i> Deposit</button></a>
+                <a href="{% url 'deposit' %}"><button style="background-color: rgb(218, 171, 14); border: none; margin-bottom: 10px; padding: 5px 10px; color: white; border-radius: 5px;"><i class="fa-solid fa-download fa-rotate-180"></i> Withdraw</button></a>
+              </center>
             </div>
           </div>
         </div>
-        <!-- /.col-->
-        <div class="col-sm-6 col-lg-3">
-          <div class="card mb-4 dashboard_bg">
-            <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-              <div>
-                <div class="fs-4 fw-semibold">{% if balance is None %}$0{% else %}${{withdraw}}{% endif %}<span class="fs-6 fw-normal">
-                    <svg class="icon">
-                      <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-bottom"></use>
-                    </svg></span></div>
-                <div>Pending Withdrawal</div>
-              </div>
-              <div class="dropdown">
-                <button class="btn btn-transparent text-white p-0" type="button" data-coreui-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <svg class="icon">
-                    <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"></use>
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-              <p style="font-size: small;">
-                Pending withdrawal is the amount withdraw that is yet to be processed.
-              </p>
-              <!--<canvas class="chart" id="card-chart4" height="70"></canvas>-->
-            </div>
-          </div>
-        </div>
-        <!-- /.col-->
-
       </div>
 
-      <div class="row">
-        <div class="col-sm-12 col-lg-12">
-            <div class="card mb-4" style="--cui-card-cap-bg: #3b5998">
-                <div class="card-header text-light" style="height: 15vh;">
-                    <h3>Referral</h3>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" id="progress" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div class="card-body row text-center">
-                    <div class="col">
-                        <div class="fs-5 fw-semibold">{% if total %}{{total}}{% else %}0{% endif %}</div>
-                        <div class="text-uppercase text-medium-emphasis small">Referrals</div>
-                    </div>
-                    <div class="vr"></div>
-                    <div class="col">
-                        <div class="fs-5 fw-semibold">{% if earnings %}${{earnings}}{% else %}$0{% endif %}</div>
-                        <div class="text-uppercase text-medium-emphasis small">Earnings</div>
-                    </div>
-                </div>
+      <!-- Referral -->
+      <div class="col-sm-12 col-lg-5">
+        <div class="card mb-4 dashboard_bg" style="--cui-card-cap-bg: #3b5998">
+          <div
+            class="card-header text-light"
+            style="height: auto; padding-bottom: 20px; padding-top: 20px"
+          >
+            <center>
+              <h6 style="text-transform: uppercase">Affiliate Program</h6>
+            </center>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-striped bg-warning"
+                role="progressbar"
+                id="progress"
+                aria-valuenow="75"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
             </div>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" id="wallet" disabled>
+          </div>
+          <div class="card-body row text-center">
+            <div class="col">
+              <div class="fs-5 fw-semibold">
+                {% if total %}{{total}}{% else %}0{% endif %}
+              </div>
+              <div class="text-uppercase text-medium-emphasis small">
+                Referrals
+              </div>
+            </div>
+            <div class="vr"></div>
+            <div class="col">
+              <div class="fs-5 fw-semibold">
+                {% if earnings %}${{earnings}}{% else %}$0{% endif %}
+              </div>
+              <div class="text-uppercase text-medium-emphasis small">
+                Earnings
+              </div>
+            </div>
+          </div>
+          <div class="input-group mb-4 px-3">
+            <input type="text" class="form-control" id="wallet" disabled />
             <div class="input-group-append">
-              <span class="input-group-text bg-primary text-light" id="copy">Copy</span>
+              <span class="input-group-text bg-primary text-light" id="copy"
+                >Copy</span
+              >
             </div>
+          </div>
         </div>
       </div>
     </div>
-
-
-
-    <!--Table content-->
-    <h4>Transactions</h4>
-    <table class="table">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col">SN</th>
-          <th scope="col">Action</th>
-          <th scope="col">Amount</th>
-          <th scope="col">Type</th>
-          <th scope="col">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for datas in data %}
-        <tr>
-          <th scope="row">{{forloop.counter}}</th>
-          <td>{{datas.action}}</td>
-          <td>${{datas.amount}}</td>
-          <td>{% if datas.currency is None%} dollar {% else%} {{datas.currency}} {% endif %}</td>
-          {% if datas.status == True %}
-          <td><i class="fa-solid fa-circle-check" style="color: green;"></i> Confirmed</td>   
-          {% else %}
-          <td style="color: red;">pending</td>
-          {% endif %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+  <!-- Smaller boxes-->
+  <div class="row">
+    <div class="col-sm-6 col-lg-4">
+      <div class="card mb-4 text-white bg-info">
+        <div
+          class="card-body pb-0 d-flex justify-content-between align-items-start"
+        >
+          <div>
+            <div class="fs-4 fw-semibold">
+              {% if balance is None %}$0{% else %}${{confirm}}{% endif %}<span
+                class="fs-6 fw-normal"
+              >
+                <svg class="icon">
+                  <use
+                    xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-top"
+                  ></use></svg
+              ></span>
+            </div>
+            <div>Total Withdrawal</div>
+          </div>
+          <div class="dropdown">
+            <button
+              class="btn btn-transparent text-white p-0"
+              type="button"
+              data-coreui-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <svg class="icon">
+                <use
+                  xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="c-chart-wrapper mt-3 mx-3" style="height: 70px">
+          <p style="font-size: small">
+            Total Withdrawal is the total amount you have successfully withdraw
+            from your account.
+          </p>
+          <!--<canvas class="chart" id="card-chart2" height="70"></canvas>-->
+        </div>
+      </div>
+    </div>
+    <!-- /.col-->
+    <div class="col-sm-6 col-lg-4">
+      <div class="card mb-4 text-white bg-warning">
+        <div
+          class="card-body pb-0 d-flex justify-content-between align-items-start"
+        >
+          <div>
+            <div class="fs-4 fw-semibold">
+              {% if balance is None %}$0{% else %}${{invest}}{% endif %}<span
+                class="fs-6 fw-normal"
+              >
+                <svg class="icon">
+                  <use
+                    xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-top"
+                  ></use></svg
+              ></span>
+            </div>
+            <div>Active Deposit</div>
+          </div>
+          <div class="dropdown">
+            <button
+              class="btn btn-transparent text-white p-0"
+              type="button"
+              data-coreui-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <svg class="icon">
+                <use
+                  xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="c-chart-wrapper mt-3 mx-3" style="height: 70px">
+          <p style="font-size: small">
+            Active deposit shows the amount of funds currently invested.
+          </p>
+          <!--<canvas class="chart" id="card-chart3" height="70"></canvas>-->
+        </div>
+      </div>
+    </div>
+    <!-- /.col-->
+    <div class="col-sm-6 col-lg-4">
+      <div class="card mb-4 text-white bg-danger">
+        <div
+          class="card-body pb-0 d-flex justify-content-between align-items-start"
+        >
+          <div>
+            <div class="fs-4 fw-semibold">
+              {% if balance is None %}$0{% else %}${{withdraw}}{% endif %}<span
+                class="fs-6 fw-normal"
+              >
+                <svg class="icon">
+                  <use
+                    xlink:href="vendors/@coreui/icons/svg/free.svg#cil-arrow-bottom"
+                  ></use></svg
+              ></span>
+            </div>
+            <div>Pending Withdrawal</div>
+          </div>
+          <div class="dropdown">
+            <button
+              class="btn btn-transparent text-white p-0"
+              type="button"
+              data-coreui-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <svg class="icon">
+                <use
+                  xlink:href="vendors/@coreui/icons/svg/free.svg#cil-options"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="c-chart-wrapper mt-3 mx-3" style="height: 70px">
+          <p style="font-size: small">
+            Pending withdrawal is the amount withdraw that is yet to be
+            processed.
+          </p>
+          <!--<canvas class="chart" id="card-chart4" height="70"></canvas>-->
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-
 <script>
-  const value = '{{total}}'
-  const btn = document.getElementById('copy');
-  const progress = document.getElementById('progress');
-  progress.style.width = `${value}0%`
-  const wallet = document.getElementById('wallet');
-  wallet.value = `${window.location.origin}/register/{{refer}}`
-  btn.addEventListener('click', ()=>{
-      btn.innerText = 'copied'
-      navigator.clipboard.writeText(`${wallet.value}`)
-  })
+  const value = "{{total}}";
+  const btn = document.getElementById("copy");
+  const progress = document.getElementById("progress");
+  progress.style.width = `${value}0%`;
+  const wallet = document.getElementById("wallet");
+  wallet.value = `${window.location.origin}/register/{{refer}}`;
+  btn.addEventListener("click", () => {
+    btn.innerText = "copied";
+    navigator.clipboard.writeText(`${wallet.value}`);
+  });
 </script>
 {% endblock %}
