--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Apex fortitude">
         <meta name="author" content="Łukasz Holeczek">
         <meta name="keyword" content="Investment">
-        <title>ApexFortitude</title>
+        <title>ZenithPort</title>
         
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="theme-color" content="#ffffff">
@@ -23,8 +23,8 @@
         <link href="{% static 'vendors/@coreui/chartjs/css/coreui-chartjs.css' %}" rel="stylesheet">
       </head>
       <body>
-        <div class="sidebar sidebar-dark sidebar-fixed" id="sidebar">
-          <div class="sidebar-brand  d-md-flex">
+        <div class="sidebar sidebar-dark sidebar-fixed" id="sidebar" style="padding-left: 10px;">
+          <div class="sidebar-brand d-none d-md-flex">
             <a href="{% url 'home' %}"><img class="sidebar-brand-full" src="{% static 'media/logos.png' %}" style="height: 50px;" alt="logo"/></a>
           </div>
           <ul class="sidebar-nav" data-coreui="navigation" data-simplebar="">
@@ -32,83 +32,63 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">
                 <i class="fa-brands fa-windows nav-icon"></i> Dashboard</a>
             </li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
+              <i class="fa-solid fa-clock-rotate-left nav-icon"></i>Transactions</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'deposit' %}">
-                <i class="fa-solid fa-wallet nav-icon" ></i> Deposit</a>
+                <i class="fa-solid fa-sack-dollar nav-icon"></i> Deposit</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'withdrawal' %}">
-              <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Withdrawal</a>
+              <i class="fa-solid fa-money-bill-transfer nav-icon"></i>Withdrawal</a>
             </li>
-            <!-- Dropdown for withdrawal -->
-
-            <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
-                <i class="fa-solid fa-clock-rotate-left nav-icon"></i> Transaction</a>
-              <ul class="nav-group-items">
-                <li class="nav-item"><a class="nav-link" href="{% url 'transaction' %}">
-                  <i class="fa-solid fa-coins nav-icon"></i> All Transaction</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'deposithistory' %}">
-                  <i class="fa-solid fa-sack-dollar nav-icon"></i></i> Deposit</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'withdrawalhistory' %}">
-                  <i class="fa-solid fa-money-bill-transfer nav-icon"></i> Withdrawal</a>
-                </li>
-              </ul>
-            </li>
-            <!-- end dropdown for withdrawal -->
             <li class="nav-item"><a class="nav-link" href="{% url 'initiatetransfer' %}">
               <i class="fa-solid fa-arrow-right-arrow-left nav-icon"></i>Transfer</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'active' %}">
               <i class="fa-solid fa-hand-holding-dollar nav-icon"></i>Investment</a>
             </li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'referal' %}">
+              <i class="fa-solid fa-file-contract nav-icon"></i>Referral</a>
+            </li>
+            {% if user.is_staff %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'email' %}">
+              <i class="fa-solid fa-envelope nav-icon"></i>Send Email</a>
+            </li>
+            {% else %}
+            {{empty}}
+            {% endif %}
             
             <li class="nav-title">Settings</li>
-            <!-- Dropdown for account -->
-            <li class="nav-group"><a class="nav-link nav-group-toggle" href="#">
-              <i class="fa-solid fa-users nav-icon"></i> Account</a>
-              <ul class="nav-group-items">
-                <li class="nav-item"><a class="nav-link" href="{% url 'details' %}">
-                  <i class="fa-solid fa-user nav-icon"></i> My Profile</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'editprofile' %}">
-                    <i class="fa-solid fa-pen-to-square nav-icon"></i> Edit Profile</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'referal' %}">
-                  <i class="fa-solid fa-file-contract nav-icon"></i>Referal</a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">
-                    <i class="fa-solid fa-right-from-bracket nav-icon"></i> Logout</a>
-                </li>
-              </ul>
+            <li class="nav-item"><a class="nav-link" href="{% url 'details' %}">
+                <i class="fa-solid fa-user nav-icon"></i> My Profile</a>
             </li>
-            <!-- end dropdown for accounts -->
+            <li class="nav-item"><a class="nav-link" href="{% url 'editprofile' %}">
+                <i class="fa-solid fa-pen-to-square nav-icon"></i> Edit Profile</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">
+                <i class="fa-solid fa-right-from-bracket nav-icon"></i> Logout</a>
+            </li>
           </ul>
-        <button class="sidebar-toggler" type="button" data-coreui-toggle="unfoldable"></button>
         </div>
         <div class="wrapper d-flex flex-column min-vh-100 bg-light">
-          <header class="header header-sticky mb-4">
+          <header class="header header-fixed mb-4">
             <div class="container-fluid">
               <button class="header-toggler px-md-0 me-md-3" type="button" onclick="coreui.Sidebar.getInstance(document.querySelector('#sidebar')).toggle()">
-                <i class="fa-solid fa-bars"></i><span style="font-weight: bold;"> Menu</span>
-              </button><a class="header-brand d-md-none" href="#">
-
+                <i class="fa-solid fa-bars"></i>
+              </button>
               <!--Notification begin-->
               <ul class="header-nav ms-auto">
-                
-                <li class="mt-1 mt-lg-1">
-                  <a href="{% url 'deposit' %}" class="px-3" ><i class="fa-solid fa-right-to-bracket" style="color: green;" ></i></a>
-                  <a href="{% url 'withdrawal' %}"><i class="fa-solid fa-right-from-bracket" style="color: red;"></i></a>
-                </li>
-
                 <!-- message notification -->
 
                 <li class="nav-item dropdown" id="bell"><a class="nav-link py-0" data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                    <div class="avatar avatar-md"><i class="fa-regular fa-bell"><sup style="background-color: red; border-radius: 50%; color: white; padding: 2px 3px; font-size: x-small;">{% if num is None %}0{% else %}{{num}}{% endif %}</sup></i></div>
+                    <div class="avatar avatar-md"><i class="fa-regular fa-bell"><sup style="background-color: red; border-radius: 50%; color: white; padding: 2px 3px; font-size: x-small;" id="notify" >{% if num is None %}0{% else %}{{num}}{% endif %}</sup></i></div>
                   </a>
                   <div class="dropdown-menu dropdown-menu-end pt-0">
                     <div class="dropdown-header bg-light py-2" style="width: 45vh;">
                       <div class="fw-semibold" style="color: black ; padding-bottom: 10px;">Messages</div>
                     </div>
+                    
+                    {% if item is not None %}
                     {% for d in item %}
                     <div class="dropdown" style="padding-left: 10px;" id="msg{{d.pk}}">
                       <div>
@@ -120,10 +100,12 @@
                     </div> 
                     <hr>
                     {% endfor %}
+                    {% else %}
+                    {{empty}}
+                    {% endif %}
                   </div>
                 </li>
               </ul>
-              <!--Notification -->
             </div>
             <div class="header-divider"></div>
             <div class="container-fluid">
@@ -135,15 +117,17 @@
           {% block body %}
           {% endblock %}
           <footer class="footer">
-            <div><script>document.write(new Date().getFullYear())</script>©Apex-Fortitude All right reserved.</div>
+            <div class="container-fluid">
+              <div><script>document.write(new Date().getFullYear())</script>©Zenithport All right reserved.</div>
+            </div>
           </footer>
         </div>
 
-        
         <script>
           var token =  '{{csrf_token}}'
           const bell = document.getElementById('bell')
           const del = document.querySelectorAll('.fa-trash')
+          const notify = document.getElementById('notify')
           bell.addEventListener('click', (e)=>{
             e.stopPropagation()
           })
@@ -159,6 +143,11 @@
                 success: function(response){
                   const msg = document.getElementById(`msg${d.target.id}`)
                   msg.remove()
+                  if(parseInt(notify.innerText) >= 1){
+                    notify.innerText = `${parseInt(notify.innerText)- 1}`
+                  }
+                  
+                  
                 },
                 error: function(error){
                   console.log('An error occured')
@@ -169,7 +158,6 @@
           })
 
         </script>
-
         <!-- CoreUI and necessary plugins-->
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -177,10 +165,12 @@
         <script src="{% static 'vendors/simplebar/js/simplebar.min.js' %}"></script>
         <!-- Plugins and scripts required by this view-->
         <script src="https://kit.fontawesome.com/82d49a62e0.js" crossorigin="anonymous"></script>
+        <script src="{% static 'vendors/chart.js/js/chart.min.js' %}"></script>
         <script src="{% static 'vendors/@coreui/chartjs/js/coreui-chartjs.js' %}"></script>
         <script src="{% static 'vendors/@coreui/utils/js/coreui-utils.js' %}"></script>
         <script src="{% static 'vendors/js/main.js' %}"></script>
-        
-
+        <script>
+        </script>
+    
       </body>
     </html>
