update email sme

--- a/cryptocurrency/website/crypto/templates/email/sendbulkmail.html
+++ b/cryptocurrency/website/crypto/templates/email/sendbulkmail.html
@@ -26,18 +26,18 @@
                     <br>
                     <br>
                     <p style="font-size: larger;">
-                        Thank you for choosing <a href="zenithport.com " style="text-decoration: none; font-size: larger;">zenithport.com</a><br>
-                        Best Regards, <br>
-                        Admin, <br>
-                        <a href="zenithport.com" style="text-decoration: none; font-size: larger;">zenithport.com</a>
+                      Thank you for choosing <a href="Apexfortitude.com " style="text-decoration: none; font-size: larger;">Apexfortitude.com</a><br>
+                      Best Regards, <br>
+                      Admin, <br>
+                      <a href="Apexfortitude.com" style="text-decoration: none; font-size: larger;">Apexfortitude.com</a>
 
-                    </p>
+                  </p>
                 </div>
-                <div style="background-color: #004767; height: 15vh; margin-top: 15px; padding: 15px 0;">
-                    <center><p style="text-transform: uppercase; color: white;">Zenithport</p></center>
-                    <center><p style="color: white;">Dreibündenstrasse 6383, Switzerland.</p></center>
-                    <center><h6 style="color: white;">2024©Zenithport, inc. All rights reserved</h6></center>
-                </div>
+                <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
+                  <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
+                  <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
+                  <center><h6 style="color: white;">2024&#169;Apexfortitude, inc. All rights reserved</h6></center>
+              </div>
             </div>
         </div>
     </div>
