--- a/cryptocurrency/website/crypto/templates/email/sendbulkmail.html
+++ b/cryptocurrency/website/crypto/templates/email/sendbulkmail.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div style="background-color: #004767; height: 15vh; padding: 15px 0;">
+                <div style="background-color: #3B3D2E; height: 15vh; padding: 15px 0;">
                     <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; height: 6vh;">
                     <center><h3 style="color: white; padding-bottom: 5px;">{{subject}}</h3></center>
                 </div>
