--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -45,6 +45,16 @@
         }
     </style>
     <!-- Smartsupp Live Chat script -->
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'f6dda4566341296674e757fcbcfc41e1c52a7dc0';
+        window.smartsupp||(function(d) {
+            var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+            s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+            c.type='text/javascript';c.charset='utf-8';c.async=true;
+            c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+        })(document);
+    </script>
     
 
 
@@ -171,6 +181,5 @@
         <script src="{% static 'custom/scripts/maps.min.js' %}"></script>
         <!-- <script src="tools/sidebar/sidebar.js" data-setting="execoore"></script> -->
     </footer>
-    <script src="//code.tidio.co/ipvli9sxoswpe1oy7wphe4hxajemwu4i.js" async></script>
 </body>
 </html>
